# demo-kubernetes-app

app/: Dockerfile  app.py  pyproject.toml
app/templates/: fortune.html
manifests/v0/: app.yml  autoscaler.fortune-teller.yml  deployment.fortune-teller.yml  ing.fortune-teller.yml  pod.app.yml  svc.fortune-teller.clusterip.yml  svc.fortune-teller.loadbalancer.yml  svc.fortune-teller.nodeport.yml
